--- a/LoanCalculator.RazorPages/LoanCalculator.RazorPages.csproj
+++ b/LoanCalculator.RazorPages/LoanCalculator.RazorPages.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -10,8 +10,6 @@
     <PackageReference Include="CreditCheckTest" Version="1.1.0" />
     <PackageReference Include="LoanHelperDemo" Version="1.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
   </ItemGroup>
 
 
